--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "llm-ollama",
     "llm-openai",
     "llm-openrouter",
+    "web-search",
 ]
 
 [profile.release]
@@ -25,3 +26,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }
 base64 = { version = "0.22.1" }
+async-trait = "0.1.80"
+http = "1.1.0"
+url = "2.5.2"
+wit-bindgen = "0.40.0"
