--- a/web-search-google/Cargo.toml
+++ b/web-search-google/Cargo.toml
@@ -9,7 +9,7 @@ golem-rust = { git = "https://github.com/golemcloud/golem-rust" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 reqwest = { version = "0.11", features = ["json"] }
-tokio = { version = "1.0", features = ["full"] }
+tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"] }
 anyhow = "1.0"
 url = "2.4"
 chrono = { version = "0.4", features = ["serde"] }
