fix(ci): Fix ollama integration test by building required dependencies
- Add build-websearch-google step before build-ollama to resolve missing dependency
- Add wasm32-wasip1 target to Rust toolchain setup
- Update cargo-component version to 0.20.0 for compatibility
- Fixes "No such file or directory" error when wac plug tries to use web_search_google.wasm

The ollama test was failing because it depends on the web-search-google component
being built first, but the CI workflow wasn't building it in the correct order.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -102,12 +102,13 @@ jobs:
         with:
           toolchain: stable
           override: true
+          target: wasm32-wasip1
       - uses: davidB/rust-cargo-make@v1
       - uses: cargo-bins/cargo-binstall@main
       - name: Install tools
         run: |
           set -e
-          cargo binstall --force --locked cargo-component@0.21.1
+          cargo binstall --force --locked cargo-component@0.20.0
           cargo binstall golem-cli@1.2.3 --locked --force --no-confirm
           cargo binstall wac-cli --locked --force --no-confirm
       - name: Start Ollama in Docker
@@ -137,6 +138,9 @@ jobs:
       - name: Build and test Ollama integration
         run: |
           set -e
+          # Build websearch-google component first (required dependency)
+          cargo make build-websearch-google
+          # Build ollama component
           cargo make build-ollama
           cd test
           golem-cli app build -b ollama-debug
