fix(ci): Fix WASI interface version mismatch in component builds
- Standardize cargo-component version to 0.20.0 across all CI jobs
- Add wasm32-wasip1 target to all WASM build jobs for consistency
- Add cargo clean step to prevent cached component version conflicts
- Synchronize golem-cli version to 1.2.3 in Makefile.toml and CI
- Update all test components to use cargo-component instead of cargo component
- Add wit dependency to build-test-components to sync WIT interfaces
- Install wit-deps-cli in CI for WIT dependency synchronization

Fixes 'cannot merge used type input-stream as it is expected to be from
interface wasi:io/streams@0.2.0 but it is from interface wasi:io/streams@0.2.3'
error in wac plug command during component merging.

The issue was caused by inconsistent tooling versions between main components
and test components, resulting in incompatible WASI interface versions.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -113,6 +113,7 @@ jobs:
           cargo binstall --force --locked cargo-component@0.20.0
           cargo binstall golem-cli@1.2.3 --locked --force --no-confirm
           cargo binstall wac-cli --locked --force --no-confirm
+          cargo binstall wit-deps-cli --locked --force --no-confirm
       - name: Start Ollama in Docker
         run: |
           set -e
@@ -142,6 +143,8 @@ jobs:
           set -e
           # Clean any cached builds to avoid WASI version conflicts
           cargo clean
+          # Synchronize WIT dependencies to ensure consistent WASI interface versions
+          cargo make wit
           # Build websearch-google component first (required dependency)
           cargo make build-websearch-google
           # Build ollama component
