--- a/Makefile.toml
+++ b/Makefile.toml
@@ -337,12 +337,13 @@ args = [
 ]
 
 [tasks.build-test-components]
-dependencies = ["build"]
+dependencies = ["build", "wit"]
 description = "Builds all test components with golem-cli"
 install_crate = "cargo-binstall"
 script = '''
-cargo-binstall golem-cli@1.2.2-dev.11 --locked --force --no-confirm
+cargo-binstall golem-cli@1.2.3 --locked --force --no-confirm
 cargo-binstall wac-cli --locked --force --no-confirm
+cargo-binstall cargo-component@0.20.0 --locked --force --no-confirm
 # Ensure websearch-google component is built first
 cargo-component build -p web-search-google
 cd test
