--- a/test/components-rust/test-llm/Cargo.toml
+++ b/test/components-rust/test-llm/Cargo.toml
@@ -15,6 +15,7 @@ grok = []
 openai = []
 openrouter = []
 ollama = []
+bedrock = []
 
 [dependencies]
 # To use common shared libs, use the following:
