--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ resolver = "2"
 members = [
     "llm/llm",
     "llm/anthropic",
+    "llm/bedrock",
     "llm/grok",
     "llm/ollama",
     "llm/openai",
@@ -26,3 +27,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }
 base64 = { version = "0.22.1" }
+hex = { version = "0.4" }
+hmac = { version = "0.12" }
+sha2 = { version = "0.10" }
+chrono = { version = "0.4", features = ["serde"] }
