--- a/llm/bedrock/Cargo.toml
+++ b/llm/bedrock/Cargo.toml
@@ -25,10 +25,9 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 wit-bindgen-rt = { workspace = true }
 base64 = { workspace = true }
-hex = { workspace = true }
-hmac = { workspace = true }
-sha2 = { workspace = true }
-chrono = { workspace = true }
+hmac = "0.12"
+sha2 = "0.10"
+time = { version = "0.3", features = ["formatting"] }
 
 [package.metadata.component]
 package = "golem:llm-bedrock"
