--- a/test/components-rust/test-embed/golem.yaml
+++ b/test/components-rust/test-embed/golem.yaml
@@ -6,7 +6,7 @@
 # See https://learn.golem.cloud/docs/app-manifest#field-reference for field reference
 
 components:
-  test:embed:
+  test:embed: 
     profiles:
       # DEBUG PROFILES
       openai-debug:
@@ -22,10 +22,10 @@ components:
               - ../../common-rust
             targets:
               - target/wasm32-wasip1/debug/test_embed.wasm
-          - command: wac plug --plug ../../../../target/wasm32-wasip1/debug/golem_embed_openai.wasm ../../target/wasm32-wasip1/debug/test_embed.wasm -o ../../target/wasm32-wasip1/debug/test_openai_plugged.wasm
+          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_embed_openai.wasm ../../target/wasm32-wasip1/debug/test_embed.wasm -o ../../target/wasm32-wasip1/debug/test_openai_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_embed.wasm
-              - ../../../../target/wasm32-wasip1/debug/golem_embed_openai.wasm
+              - ../../../target/wasm32-wasip1/debug/golem_embed_openai.wasm
             targets:
               - ../../target/wasm32-wasip1/debug/test_openai_plugged.wasm
         sourceWit: wit
@@ -48,10 +48,10 @@ components:
               - ../../common-rust
             targets:
               - target/wasm32-wasip1/debug/test_embed.wasm
-          - command: wac plug --plug ../../../../target/wasm32-wasip1/debug/golem_embed_cohere.wasm ../../target/wasm32-wasip1/debug/test_embed.wasm -o ../../target/wasm32-wasip1/debug/test_cohere_plugged.wasm
+          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_embed_cohere.wasm ../../target/wasm32-wasip1/debug/test_embed.wasm -o ../../target/wasm32-wasip1/debug/test_cohere_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_embed.wasm
-              - ../../../../target/wasm32-wasip1/debug/golem_embed_cohere.wasm
+              - ../../../target/wasm32-wasip1/debug/golem_embed_cohere.wasm
             targets:
               - ../../target/wasm32-wasip1/debug/test_cohere_plugged.wasm
         sourceWit: wit
@@ -74,10 +74,10 @@ components:
               - ../../common-rust
             targets:
               - target/wasm32-wasip1/debug/test_embed.wasm
-          - command: wac plug --plug ../../../../target/wasm32-wasip1/debug/golem_embed_hugging_face.wasm ../../target/wasm32-wasip1/debug/test_embed.wasm -o ../../target/wasm32-wasip1/debug/test_hugging_face_plugged.wasm
+          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_embed_hugging_face.wasm ../../target/wasm32-wasip1/debug/test_embed.wasm -o ../../target/wasm32-wasip1/debug/test_hugging_face_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_embed.wasm
-              - ../../../../target/wasm32-wasip1/debug/golem_embed_hugging_face.wasm
+              - ../../../target/wasm32-wasip1/debug/golem_embed_hugging_face.wasm
             targets:
               - ../../target/wasm32-wasip1/debug/test_hugging_face_plugged.wasm
         sourceWit: wit
@@ -100,10 +100,10 @@ components:
               - ../../common-rust
             targets:
               - target/wasm32-wasip1/debug/test_embed.wasm
-          - command: wac plug --plug ../../../../target/wasm32-wasip1/debug/golem_embed_voyageai.wasm ../../target/wasm32-wasip1/debug/test_embed.wasm -o ../../target/wasm32-wasip1/debug/test_voyageai_plugged.wasm
+          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_embed_voyageai.wasm ../../target/wasm32-wasip1/debug/test_embed.wasm -o ../../target/wasm32-wasip1/debug/test_voyageai_plugged.wasm
             sources:
               - ../../target/wasm32-wasip1/debug/test_embed.wasm
-              - ../../../../target/wasm32-wasip1/debug/golem_embed_voyageai.wasm
+              - ../../../target/wasm32-wasip1/debug/golem_embed_voyageai.wasm
             targets:
               - ../../target/wasm32-wasip1/debug/test_voyageai_plugged.wasm
         sourceWit: wit
