--- a/Makefile.toml
+++ b/Makefile.toml
@@ -6,6 +6,12 @@ skip_core_tasks = true
 command = "cargo"
 args = ["clean"]
 
+[tasks.clean-all]
+script_runner = "@duckscript"
+script = '''
+exec find . -type d \( -name "target" -o -name "wit-generated" -o -name "golem-temp" \) -exec rm -rf {} +
+'''
+
 [tasks.unit-tests]
 command = "cargo"
 args = ["test"]
@@ -13,7 +19,7 @@ args = ["test"]
 [tasks.build]
 script_runner = "@duckscript"
 script = '''
-domains = array llm
+domains = array llm embed
 
 # if there is no domain passed run for every domain
 if is_empty ${1}
@@ -28,7 +34,7 @@ end
 [tasks.release-build]
 script_runner = "@duckscript"
 script = '''
-domains = array llm
+domains = array llm embed
 
 # if there is no domain passed run for every domain
 if is_empty ${1}
@@ -44,7 +50,7 @@ end
 script_runner = "@duckscript"
 script = '''
 #!/bin/bash
-domains = array llm
+domains = array llm embed
 
 # if there is no domain passed run for every domain
 if is_empty ${1}
@@ -60,7 +66,7 @@ end
 script_runner = "@duckscript"
 script = '''
 #!/bin/bash
-domains = array llm
+domains = array llm embed
 
 # if there is no domain passed run for every domain
 if is_empty ${1}
@@ -75,7 +81,7 @@ end
 [tasks.wit]
 script_runner = "@duckscript"
 script = '''
-domains = array llm
+domains = array llm embed
 
 # if there is no domain passed run for every domain
 if is_empty ${1}
@@ -91,7 +97,7 @@ end
 description = "Builds all test components with golem-cli"
 script_runner = "@duckscript"
 script = '''
-domains = array llm
+domains = array llm embed
 
 # if there is no domain passed run for every domain
 if is_empty ${1}
