--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,13 @@ members = [
     "llm/ollama",
     "llm/openai",
     "llm/openrouter",
+    "search/search",
+    "search/elasticsearch",
+    "search/opensearch",
+    "search/algolia",
+    "search/typesense",
+    "search/meilisearch",
+    "test/components-rust/test-search",
 ]
 
 [profile.release]
@@ -19,10 +26,16 @@ opt-level = 's'
 golem-rust = "1.6.0"
 log = "0.4.27"
 golem-llm = { path = "llm/llm", version = "0.0.0", default-features = false }
+golem-search = { path = "search/search", version = "0.0.0", default-features = false }
 reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-may-2025", features = [
     "json",
 ] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }
+wit-bindgen = { version = "0.40.0" }
 base64 = { version = "0.22.1" }
+sha2 = { version = "0.10" }
+hmac = { version = "0.12" }
+hex = { version = "0.4" }
+chrono = { version = "0.4", features = ["serde"] }
